--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,3 +1,19 @@
 <h1>Start your free trial</h1>
 
+<%= error_messages_for :company %>
+<%form_for  @company, :url => companies_path do |f| %> 
+
+  <p><%= label_tag 'Compnay Name' %><br/>
+  <%= f.text_field :name %></p>
+
+  <p><%= label_tag 'Subdomain' %><br/>
+  <%= f.text_field :subdomain %></p>
+
+  <%f.fields_for :users do |user_fields|%>
+    <p><%= user_fields.label :email, "Email"%><br/>
+    <%=user_fields.text_field :email%></p>
+  <%end-%>
+
+  <p><%= submit_tag 'Sign up' %></p>
+<%end-%>
 
