--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <% @user.password = @user.password_confirmation = nil %>
 
 <%= error_messages_for :user %>
-<% form_for :user, :url => users_path do |f| -%>
+<% form_for @user, :url => users_path do |f| -%>
 <p><%= label_tag 'email' %><br/>
 <%= f.text_field :email %></p>
 
@@ -11,6 +11,11 @@
 
 <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
 <%= f.password_field :password_confirmation %></p>
+
+<% f.fields_for :companies do |company_fields|%>
+  <p><%= company_fields.label :subdomain%><br/>
+  <%= company_fields.text_field :subdomain%></p>
+<%end-%>
 
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
