--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,9 +7,98 @@
   $(document).ready(function() {
 
     // page is now ready, initialize the calendar...
+    var date = new Date();
+		var d = date.getDate();
+		var m = date.getMonth();
+		var y = date.getFullYear();
+
 
     $('#calendar').fullCalendar({
-        // put your options and callbacks here
+     
+      header: {
+				left: 'prev,next today',
+				center: 'title',
+				right: 'month,agendaWeek,agendaDay'
+			},
+
+      defaultView: 'agendaWeek',
+
+		events: [
+				{
+					title: 'All Day Event',
+					start: new Date(y, m, 1)
+				},
+				{
+					title: 'Long Event',
+					start: new Date(y, m, d-5),
+					end: new Date(y, m, d-2)
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: new Date(y, m, d-3, 16, 0),
+					allDay: false
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: new Date(y, m, d+4, 16, 0),
+					allDay: false
+				},
+				{
+					title: 'Meeting',
+					start: new Date(y, m, d, 10, 30),
+					allDay: false
+				},
+				{
+					title: 'Lunch',
+					start: new Date(y, m, d, 12, 0),
+					end: new Date(y, m, d, 14, 0),
+					allDay: false
+				},
+				{
+					title: 'Birthday Party',
+					start: new Date(y, m, d+1, 19, 0),
+					end: new Date(y, m, d+1, 22, 30),
+					allDay: false
+				},
+				{
+					title: 'Click for Google',
+					start: new Date(y, m, 28),
+					end: new Date(y, m, 29),
+					url: 'http://google.com/'
+				}
+			],
+
+
+      dayClick: function(date, allDay, jsEvent, view) {
+
+          if (allDay) {
+              alert('Clicked on the entire day: ' + date);
+          }else{
+              alert('Clicked on the slot: ' + date);
+          }
+
+          alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
+
+          alert('Current view: ' + view.name);
+
+          // change the day's background color just for fun
+          $(this).css('background-color', 'red');
+
+      },
+
+      eventClick: function(calEvent, jsEvent, view) {
+
+          alert('Event: ' + calEvent.title);
+          alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
+          alert('View: ' + view.name);
+
+          // change the border color just for fun
+          $(this).css('border-color', 'red');
+
+      }
+
     })
 
   });
