--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,6 +2,10 @@
 
 
 <div id="calendar"></div>
+<div id="dialog" title="Basic dialog">
+	<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div>
+
 
 <script type="text/javascript">
   $(document).ready(function() {
@@ -11,6 +15,9 @@
 		var d = date.getDate();
 		var m = date.getMonth();
 		var y = date.getFullYear();
+
+    $("#dialog").dialog({ autoOpen: false })
+
 
 
     $('#calendar').fullCalendar({
@@ -85,6 +92,8 @@
 
           // change the day's background color just for fun
           $(this).css('background-color', 'red');
+      		$("#dialog").dialog('open');
+
 
       },
 
