--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
    <title>Welcome</title>
-   <%= stylesheet_link_tag "layout", "fullcalendar"%>
+   <%= stylesheet_link_tag "layout", "fullcalendar", "jquery-ui-1.8.2.custom"%>
    <%= javascript_include_tag "jquery", "jquery-ui-custom", "fullcalendar"%>
 </head>
    
