--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,22 @@
    <title>Welcome</title>
    <%= stylesheet_link_tag "layout", "fullcalendar", "jquery-ui-1.8.2.custom"%>
    <%= javascript_include_tag "jquery", "jquery-ui-custom", "fullcalendar"%>
+   <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? -%>
 </head>
    
 <body>
+
+<script type="text/javascript">
+  // Always send the authenticity_token with ajax
+  $(document).ajaxSend(function(event, request, settings) {
+    if ( settings.type == 'post' ) {
+        settings.data = (settings.data ? settings.data + "&" : "")
+            + "authenticity_token=" + encodeURIComponent( AUTH_TOKEN );
+    }
+  });
+</script>
+
+
    <div id='wrapper'>
    
       <!-- header start-->
