--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,9 @@
-<%form_for :event do |f|%>
+<%form_for :event, :url => events_url do |f|%>
   <p><label for="title">Title</label><br/>
   <%=f.text_field :title %></p>
-  
+
   <p><label for="start">Starts At</label><br/>
-  <%=f.text_field :start %></p>
+  <%=f.datetime_select :start %></p>
 
   <%= submit_tag "Create Event"%>
 <%end-%>
