--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
    <title>Welcome</title>
    <%= stylesheet_link_tag "layout", "fullcalendar", "jquery-ui-1.8.2.custom"%>
-   <%= javascript_include_tag "jquery", "jquery-ui-custom", "fullcalendar"%>
+   <%= javascript_include_tag "jquery", "jquery-ui-custom", "fullcalendar", "reminderhawk"%>
    <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? -%>
 </head>
    
