now showing only one calendar

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,9 @@
 
 <div id="calendar"></div>
 <div id="new_event" title="Create a New Event">
-<div id="edit_event" title="Edit Event">
+	<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div>
+<div id="edit_event" title="Create a New Event">
 	<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
 </div>
 
