first user is admin user for a company

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,12 +36,8 @@
 	  <div class='main-menus'>
 	      <div class="mmenus">
                <ul>
-                    <li><a href="" class="selected_menu"><span class="selected_span" >Home</span></a></li>
-                    <li><a href="" ><span>Features</span></a></li>
-                    <li><a href="" ><span >Demo / Events</span></a></li>
-			        <li><a href="" ><span >FAQ</span></a></li>
-					<li><a href="" ><span >Register</span></a></li>
-					<li><a href="" ><span >Contact </span></a></li>
+                  <li><a href="/events" class="selected_menu"><span class="selected_span" >Home</span></a></li>
+                  <li><a href="/pages/contact" ><span>Support</span></a></li>
                </ul>
 		</div>
 	  </div>
@@ -55,7 +51,7 @@
       <div id='footer'>
           <div id='footer-content'>
 		     <a href=''>Home</a>|<a href=''>Features</a>|<a href=''>Demo/Events</a>|<a href=''>FAQ</a>|<a href=''>Register</a>|<a href=''>Contact</a> 
-			 <p><br />&copy;All Rights Reserved 2008 SiteName</p>
+			 <p><br />&copy;All Rights Reserved 2010 Muziboo Web Services Pvt. Ltd</p>
 		  </div>
       </div>
    </div>  
