user has mobile number and can change password

--- a/app/views/events/_edit_create.html.erb
+++ b/app/views/events/_edit_create.html.erb
@@ -16,14 +16,14 @@
 
   <p><b>Add Mobile Numbers</b></p>
   <% f.fields_for :phone_numbers do |phone_builder|%>
-    <p><%= phone_builder.text_field :number, {:class => 'phone_num'} %><%=phone_builder.check_box :_delete %>  </p>
+    <p><%= phone_builder.text_field :number, {:class => 'phone_num'} %><span> Delete? <%=phone_builder.check_box :_delete %></span>  </p>
   <%end%> 
 
   <p><a href="#" onclick="ReminderHawk.addPhoneNumber(this); return false;">Add Phone Number</a></p>
 
   <p><b>Schedule Reminders</b></p>
   <% f.fields_for :reminders do |reminder_builder|%>
-    <p><%= reminder_builder.text_field :duration, {:size => '10', :class => 'duration'}%>  <%= reminder_builder.select :unit, Reminder::UNITS.enum_for(:each_with_index).collect {|u,i| [u, i]}%><%=reminder_builder.check_box :_delete%></p>
+    <p><%= reminder_builder.text_field :duration, {:size => '10', :class => 'duration'}%>  <%= reminder_builder.select :unit, Reminder::UNITS.enum_for(:each_with_index).collect {|u,i| [u, i]}%><span> Delete? <%=reminder_builder.check_box :_delete%></span></p>
   <%end-%>
   <p><a href="#" onclick="ReminderHawk.addReminder(this); return false;">Add another Reminder</a></p>
 
