--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,22 +3,25 @@
 
 <%= error_messages_for :user %>
 <% form_for @user, :url => users_path do |f| -%>
-<p><%= label_tag 'email' %><br/>
-<%= f.text_field :email %></p>
+  <p><%= label_tag 'email' %><br/>
+  <%= f.text_field :email %></p>
+  
+  <p><%= label_tag 'mobile', 'Mobile Number' %><br/>
+  <%= f.text_field :mobile %></p>
 
-<p><%= label_tag 'password' %><br/>
-<%= f.password_field :password %></p>
+  <p><%= label_tag 'password' %><br/>
+  <%= f.password_field :password %></p>
 
-<p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
-<%= f.password_field :password_confirmation %></p>
+  <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
+  <%= f.password_field :password_confirmation %></p>
 
-<% f.fields_for :companies do |company_fields|%>
-  <p><%= company_fields.label :name, "Company Name"%><br/>
-  <%= company_fields.text_field :name%></p>
+  <%f.fields_for :companies do |company_fields|%>
+    <p><%= company_fields.label :name, "Company Name"%><br/>
+    <%= company_fields.text_field :name%></p>
 
-  <p><%= company_fields.label :subdomain%><br/>
-  <%= company_fields.text_field :subdomain%></p>
-<%end-%>
+    <p><%= company_fields.label :subdomain, "SMS Keyword"%><br/>
+    <%= company_fields.text_field :subdomain%></p>
+  <%end-%>
 
-<p><%= submit_tag 'Sign up' %></p>
+  <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
