--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
    <title>Welcome</title>
-   <%= stylesheet_link_tag "layout", "fullcalendar", "jquery-ui-1.8.2.custom"%>
+   <%= stylesheet_link_tag "reset", "screen", "typography", "grid", "layout", "fullcalendar", "jquery-ui-1.8.2.custom"%>
    <%= javascript_include_tag "jquery", "jquery-ui-custom", "fullcalendar", "reminderhawk"%>
    <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? -%>
 </head>
@@ -48,6 +48,7 @@
 	  <!-- main-menus-end-->
 	  <!-- main-content satrt-->
       <div class='main-content'>      
+        <%= flash_notice%>
         <%=  yield%>
       </div>
       <!--main-content end-->
