--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
 
 <%= error_messages_for :user %>
 <% form_for @user, :url => users_path do |f| -%>
+  <fieldset>
   <p><%= label_tag 'email' %><br/>
   <%= f.text_field :email %></p>
   
@@ -15,7 +16,7 @@
   <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
   <%= f.password_field :password_confirmation %></p>
 
-  <%f.fields_for :companies do |company_fields|%>
+  <% f.fields_for :companies do |company_fields|%>
     <p><%= company_fields.label :name, "Company Name"%><br/>
     <%= company_fields.text_field :name%></p>
 
@@ -24,4 +25,5 @@
   <%end-%>
 
   <p><%= submit_tag 'Sign up' %></p>
+  </fieldset>
 <% end -%>
