--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,14 @@
 <h1>Reach Support</h1>
 
-<p>Form coming soon. In the meantime, please email <b>nithya@muziboo.com</b></p>
+<script type="text/javascript">var host = (("https:" == document.location.protocol) ? "https://secure." : "http://");document.write(unescape("%3Cscript src='" + host + "wufoo.com/scripts/embed/form.js' type='text/javascript'%3E%3C/script%3E"));</script>
+
+<script type="text/javascript">
+var z7x4a9 = new WufooForm();
+z7x4a9.initialize({
+'userName':'reminderhawk', 
+'formHash':'z7x4a9', 
+'autoResize':true,
+'height':'434'});
+z7x4a9.display();
+</script>
+
